remove axios and add EventService layer to `EventList`

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslintIntegration": true,
     "insertPragma": false,
     "trailingComma": "none",
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "space-before-function-paren": 0
   }
 }
