add prettier rule

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "eslintIntegration": true,
     "insertPragma": false,
     "trailingComma": "none",
-    "arrowParens": "avoid",
-    "space-before-function-paren": 0
+    "arrowParens": "avoid"
   }
 }
